about section and profile section have layout issues on smaller screen

--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 
 body {
     font-family:  "Katibeh", serif;
-    /* font-family: "Literata", serif; */
     font-weight: 400;
     font-style: normal;
 }
@@ -137,10 +136,8 @@ a:hover {
 
 
 /* sections */
-
 section {
   padding-top:4vh;
-  /* height:96vh; */
   margin:0 10rem;
   box-sizing: border-box;
   min-height:fit-content;
@@ -150,24 +147,46 @@ section {
   display:flex;
 }
 
-/* profile */
 #profile {
-  display:flex;
+  display: flex;
   justify-content: center;
-  gap:5rem;
+  align-items: center;
+  gap: 3rem;
   height: 80vh;
+  padding: 2rem;
+}
+
+.about-pic-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  max-width: 100%;
+}
+
+.about-pic {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .section__pic-container {
-  display:flex;
-  height:400px;
-  width:400px;
-  margin:auto 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 400px;
+  margin: auto 0;
 }
 
 .section__text {
-  align-self:center;
-  text-align:center;
+  align-self: center;
+  text-align: center;
+  flex: 1;
+  min-width: 300px;
+  max-width: 500px;
 }
 
 .section__text p {
@@ -193,11 +212,6 @@ section {
   justify-content: center;
   margin-top:1rem;
   gap:1rem;
-}
-
-.about-pic {
-  border-radius: 50%;
-  transform: scale(0.8);
 }
 
 /* icon */
@@ -231,8 +245,6 @@ section {
   color:white;
 }
 
-
-
 /* about section */
 #about {
   position: relative;
@@ -258,14 +270,13 @@ section {
   display: flex;
 }
 
-
 .section__content {
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
-  gap: 0.5rem;
-  top: 0.1rem;
+  gap: 3rem;
+  top: 2rem;
 }
 .section__content > div {
   margin: 5px;
@@ -276,12 +287,6 @@ section {
 .section__content div:not(.skill-icon) {
   order:1;
   flex:0 0 calc(50% - 10px);
-}
-
-.section__pic-container {
-  display: flex;
-  justify-content: center;
-  margin: 0;
 }
 
 .codeclan-pic {
@@ -353,7 +358,7 @@ section {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  gap: 1rem;
+  gap: 3.7rem;
 }
 
 .skills-container h3 {
@@ -376,98 +381,12 @@ section {
   object-fit: contain;
 }
 
-/* tablet */
-@media screen and (min-width: 768px) {
-  #about {
-    padding: 4vh 4rem 30px 4rem;
-  }
-
-  .section__content {
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-  .section__pic-container {
-    flex: 0 0 300px;
-    margin-right: 2rem;
-  }
-  
-  .about-details-container {
-    flex: 1;
-    min-width: 300px;
-  }
-  
-  .about-text {
-    text-align: left;
-  }
-  
-  .skills-container {
-    flex: 1 1 100%;
-    margin-top: 2rem;
-  }
-  
-  .skill-icon {
-    max-width: none;
-  }
-  br {
-    display: none;
-  }
-  
-}
-
-@media screen and (min-width: 1024px) {
-  #about {
-    padding: 4vh 6rem 30px 6rem;
-  }
-  .section__content {
-    flex-direction: column;
-    gap: 0.1rem;
-  }
-  .about-main-content {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 2rem;
-  }
-  
-  .section__pic-container {
-    display: flex;
-    justify-content: center;
-    margin: 0;
-  }
-  
-  .about-details-container {
-    flex: 2;
-  }
-  
-  .skills-container {
-    flex: 1;
-    margin-top: 0;
-    margin-left: 2rem;
-  }
-  
-  .skills-container h3 {
-    text-align: left;
-  }
-  
-  .skill-icon {
-    justify-content: flex-start;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  #about {
-    padding: 4vh 8rem 30px 8rem;
-  }
-}
 
 
 .section-container{
   gap:5rem;
   height:80%;
 }
-
 
 /* experience section */
 #experience {
@@ -486,9 +405,6 @@ section {
 }
 
 .experience-xingzuocheng {
-  /* width:80%;
-  
-  margin-top:1rem; */
   max-width: 100%;
   height:70%;
 }
@@ -496,7 +412,6 @@ section {
 .experience-details-container {
   display: flex;
   justify-content: space-between;
-  /* flex-direction: column; */
 }
 
 .article-container {
@@ -512,8 +427,6 @@ section {
 }
 
 /* project section */
-
-
 #projects{
   position: relative;
   margin:0;
@@ -523,8 +436,8 @@ section {
 .color-container {
   border-color: rgb(163, 163, 163);
   background: rgb(250, 250, 250);
-  
 }
+
 .product-details-container {
   display: flex;
   justify-content: space-between;
@@ -538,7 +451,6 @@ section {
 .projects-description {
   margin-bottom: 0.5rem;
 }
-
 
 /* contact */
 #contact {
@@ -599,4 +511,185 @@ footer {
 
 footer p {
   text-align: center;
+}
+
+/*  */
+@media screen and (min-width: 1200px) {
+  #profile {
+    gap: 5rem;
+  }
+  
+  .about-pic {
+    width: 250px;
+    height: 250px;
+  }
+  
+  #about {
+    padding: 4vh 8rem 30px 8rem;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  section {
+    margin: 0 1rem;
+  }
+  
+  #profile {
+    flex-direction: column;
+    gap: 2rem;
+    height: auto;
+    min-height: 80vh;
+    padding: 1rem;
+  }
+  
+  .about-pic {
+    width: 150px;
+    height: 150px;
+  }
+  
+  .section__text {
+    min-width: auto;
+    width: 100%;
+  }
+  
+  .title {
+    font-size: 2.5rem;
+  }
+  
+  .section__text__p2 {
+    font-size: 1.5rem;
+  }
+  
+  .btn-container {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .btn {
+    width: 7rem;
+    padding: 0.8rem;
+  }
+  .about-pic {
+    width: 150px;
+    height: 150px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  section {
+    margin: 0 2rem;
+  }
+  
+  #profile {
+    gap: 3rem;
+    padding: 2rem;
+  }
+  
+  .about-pic {
+    width: 180px;
+    height: 180px;
+  }
+  
+  .section__text {
+    max-width: 400px;
+  }
+  
+  #about {
+    padding: 4vh 4rem 30px 4rem;
+  }
+
+  .section__content {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .section__pic-container {
+    flex: 0 0 300px;
+    margin-right: 2rem;
+  }
+  
+  .about-details-container {
+    flex: 1;
+    min-width: 300px;
+  }
+  
+  .about-text {
+    text-align: left;
+  }
+  
+  .skills-container {
+    flex: 1 1 100%;
+    margin-top: 2rem;
+  }
+  
+  .skill-icon {
+    max-width: none;
+  }
+  br {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  #profile {
+    align-items: center;
+    text-align: center;
+    gap: 4rem;
+  }
+  
+  .about-pic {
+    width: 220px;
+    height: 220px;
+  }
+  
+  .section__text {
+    text-align: center;
+    max-width: 500px;
+  }
+  
+  #about {
+    padding: 4vh 6rem 30px 6rem;
+  }
+  .section__content {
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .about-main-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2rem;
+  }
+  
+  .section__pic-container {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+  }
+  
+  .about-details-container {
+    flex: 2;
+  }
+  
+  .skills-container {
+    flex: 1;
+    margin-top: 0;
+    margin-left: 2rem;
+  }
+  
+  .skills-container h3 {
+    text-align: left;
+  }
+  
+  .skill-icon {
+    justify-content: flex-start;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .about-pic {
+    width: 100px;
+    height: 100px;
+  }
 }
